update: added pagination

--- a/templates/carposts/authenticated_car_posts.html
+++ b/templates/carposts/authenticated_car_posts.html
@@ -14,5 +14,6 @@
             <p>No posts available.</p>
         {% endfor %}
     </ul>
+    {% include 'common/pagination.html' %}
 
 {% endblock %}
