--- a/templates/carposts/publisher_car_posts.html
+++ b/templates/carposts/publisher_car_posts.html
@@ -25,4 +25,5 @@
             <p>No posts available.</p>
         {% endfor %}
     </ul>
+    {% include 'common/pagination.html' %}
 {% endblock %}
