--- a/templates/carposts/authenticated_car_posts.html
+++ b/templates/carposts/authenticated_car_posts.html
@@ -1,19 +1,41 @@
 {% extends 'common/base.html' %}
 
 {% block content %}
-    <h1>Welcome, {{ user.username }}!</h1>
-    <h2>Car Posts</h2>
-    <ul>
-        {% for post in posts %}
-            <li>
-                <h3>{{ post.title }}</h3>
-                <p>{{ post.content }}</p>
-                <p><strong>Published:</strong> {{ post.created_at }}</p>
-            </li>
-        {% empty %}
-            <p>No posts available.</p>
-        {% endfor %}
-    </ul>
-    {% include 'common/pagination.html' %}
+    <div class="container mt-4">
+        <h1 class="text-center mb-4">Welcome, {{ user.username }}!</h1>
+        <h2 class="mb-4 text-primary">Car Posts</h2>
 
+        {% if posts %}
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                {% for post in posts %}
+                    <div class="col">
+                        <div class="card shadow-sm h-100">
+                            <div class="card-body">
+                                <h3 class="card-title">{{ post.title }}</h3>
+                                <p class="card-text">{{ post.content|truncatewords:20 }}</p>
+                                <p class="text-muted mb-1">
+                                    <strong>Published:</strong> {{ post.created_at|date:"M d, Y" }}
+
+                                </p>
+                                <p class="text-muted mb-1">
+                                    <strong>Published
+                                        by:</strong> {{ post.author.username }}
+                                </p>
+                                <a href="{% url 'detail_post' post.pk %}"
+                                   class="btn btn-secondary position-absolute bottom-0 end-0 mb-3 me-3">
+                                    Details
+                                </a>
+                            </div>
+
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        {% else %}
+            <p class="text-muted">No posts available.</p>
+        {% endif %}
+
+        {% include 'common/pagination.html' %}
+    </div>
 {% endblock %}
+
