--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,19 +8,17 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-{#    <link rel="stylesheet" href="{% static 'css/style.css' %}">#}
+    <link rel="stylesheet" href="{% static 'css/background.css' %}">
 </head>
-<body>
+<body class="gradient-background">
 {% include 'common/nav.html' %}
 
-<!-- Main Content -->
 <div class="container mt-4">
     {% block content %}
     {% endblock %}
 </div>
 
-<!-- Footer -->
-<footer class="bg-light text-center text-lg-start mt-4">
+<footer class=" text-center text-lg-start mt-4">
     <div class="text-center p-3">
         &copy; 2024 My Blog | Powered by Django
     </div>
