--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,13 @@
 {% extends 'common/base.html' %}
 
 {% block content %}
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li class="{{ message.tags }}">{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 
     <form method="post">
         {% csrf_token %}
