update:  added new forms and search functionality

--- a/templates/carposts/publisher_car_posts.html
+++ b/templates/carposts/publisher_car_posts.html
@@ -4,6 +4,7 @@
 {% block content %}
     <div class="container mt-4">
         <h1 class="text-center mb-4">Welcome, Publisher!</h1>
+        {% include 'common/search_form.html' %}
         <h2 class="mb-4 text-primary">Manage Car Posts</h2>
 
         {% if posts %}
