--- a/templates/carposts/authenticated_car_posts.html
+++ b/templates/carposts/authenticated_car_posts.html
@@ -3,6 +3,7 @@
 {% block content %}
     <div class="container mt-4">
         <h1 class="text-center mb-4">Welcome, {{ user.username }}!</h1>
+        {% include 'common/search_form.html' %}
         <h2 class="mb-4 text-primary">Car Posts</h2>
 
         {% if posts %}
