--- a/templates/carposts/delete_post.html
+++ b/templates/carposts/delete_post.html
@@ -10,6 +10,7 @@ Delete Post
 <div class="text-center">
     <form method="post">
         {% csrf_token %}
+        {{ form }}
         <button type="submit" class="btn btn-danger">Yes, Delete</button>
         <a href="{% url 'my_posts' %}" class="btn btn-secondary">Cancel</a>
     </form>
