--- a/templates/carposts/my_posts.html
+++ b/templates/carposts/my_posts.html
@@ -24,15 +24,15 @@
                                 {{ post.content|truncatewords:20 }}
                             </p>
                             <div class="d-flex justify-content-between">
-                                <a href="{% url 'edit_post' post.id %}" class="btn btn-primary btn-sm">
+                                <a href="{% url 'edit_post' post.pk %}" class="btn btn-primary btn-sm">
                                     Edit
                                 </a>
                                 <form method="post" action="{% url 'delete_post' post.id %}" style="display: inline;">
                                     {% csrf_token %}
-                                    <button type="submit" class="btn btn-danger btn-sm"
-                                            onclick="return confirm('Are you sure you want to delete this post?');">
+                                    <a href="{% url 'delete_post' post.pk %}" class="btn btn-danger btn-sm"
+                                       onclick="return confirm('Are you sure you want to delete this post?');">
                                         Delete
-                                    </button>
+                                    </a>
                                 </form>
                             </div>
                         </div>
