--- a/templates/cars/car_detail.html
+++ b/templates/cars/car_detail.html
@@ -5,18 +5,19 @@
     <p><strong>Category:</strong> {{ car.category.name }}</p>
     <p><strong>Price:</strong> ${{ car.price }}</p>
     <p><strong>Description:</strong> {{ car.description }}</p>
+{#    <a href="{% url '' %}">Book for a Test Drive</a>#}
 
-    {% if car.available_for_test_drive %}
-        <h3>Book a Test Drive</h3>
-        <form method="post">
-            {% csrf_token %}
-            <label for="date">Date:</label>
-            <input type="date" id="date" name="date" required>
-            <label for="time">Time:</label>
-            <input type="time" id="time" name="time" required>
-            <button type="submit" class="btn btn-primary">Book Now</button>
-        </form>
-    {% else %}
-        <p>Test drives are not available for this car at the moment.</p>
-    {% endif %}
+{#    {% if car.available_for_test_drive %}#}
+{#        <h3>Book a Test Drive</h3>#}
+{#        <form method="post">#}
+{#            {% csrf_token %}#}
+{#            <label for="date">Date:</label>#}
+{#            <input type="date" id="date" name="date" required>#}
+{#            <label for="time">Time:</label>#}
+{#            <input type="time" id="time" name="time" required>#}
+{#            <button type="submit" class="btn btn-primary">Book Now</button>#}
+{#        </form>#}
+{#    {% else %}#}
+{#        <p>Test drives are not available for this car at the moment.</p>#}
+{#    {% endif %}#}
 {% endblock %}
