update: reworked some views and added comments to posts

--- a/templates/carposts/my_posts.html
+++ b/templates/carposts/my_posts.html
@@ -46,4 +46,5 @@
             <a href="{% url 'home' %}" class="btn btn-secondary">Back to Home</a>
         </div>
     {% endif %}
+    {% include 'common/pagination.html' %}
 {% endblock %}
