--- a/templates/common/search_form.html
+++ b/templates/common/search_form.html
@@ -1,15 +1,16 @@
-<div class="container mt-5">
-    <h2 class="text-center mb-4">Search Posts</h2>
+<h2 class="text-center mb-4">Search Posts</h2>
 
-    <form method="GET" action="{% url 'home' %}">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search..." name="query" aria-label="Search"
-                           value="{{ request.GET.query }}"/>
-                    <button class="btn btn-primary" type="submit">Search</button>
-                </div>
-            </div>
+
+<form method="GET" action="{% url 'home' %}" class="mb-4">
+    <div class="row g-3 align-items-center">
+        <div class="col-md-4">
+            {{ form.category }}
         </div>
-    </form>
-</div>
+        <div class="col-md-6">
+            {{ form.query }}
+        </div>
+        <div class="col-md-2">
+            <button type="submit" class="btn btn-primary w-100">Filter</button>
+        </div>
+    </div>
+</form>
