--- a/templates/common/nav.html
+++ b/templates/common/nav.html
@@ -1,5 +1,75 @@
+{% load static %}
+{#{% load has_permission %}#}
+{#<nav class="navbar navbar-expand-lg navbar-light ">#}
+{#    <div class="container-fluid">#}
+{#        <a class="navbar-brand" href="{% url 'my_posts' %}">My Blog</a>#}
+{#        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"#}
+{#                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">#}
+{#            <span class="navbar-toggler-icon"></span>#}
+{#        </button>#}
+{#        <div class="collapse navbar-collapse" id="navbarNav">#}
+{#            <ul class="navbar-nav ms-auto">#}
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link" href="{% url 'home' %}">Home</a>#}
+{#                </li>#}
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link" href="{% url 'about' %}">About</a>#}
+{#                </li>#}
+{#                {% if user.is_authenticated %}#}
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link" href="{% url 'create_car_post' %}">Create post</a>#}
+{#                    </li>#}
+{#                {% endif %}#}
+{#                {% if not user.is_authenticated %}#}
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link" href="#">Contact</a>#}
+{#                    </li>#}
+{#                {% else %}#}
+{#                    <li class="nav-item dropdown">#}
+{#                        <a class="nav-link dropdown-toggle btn btn-primary text-white px-3" href="{% url 'cars' %}"#}
+{#                           id="bookCarDropdown" role="button" aria-expanded="false">#}
+{#                            Book a Car#}
+{#                        </a>#}
+{##}
+{##}
+{#                        <ul class="dropdown-menu" aria-labelledby="bookCarDropdown">#}
+{#                            <li><a class="dropdown-item" href="{% url 'book_car' %}">Create a Booking</a></li>#}
+{#                            <li><a class="dropdown-item" href="{% url 'my_bookings' %}">My Bookings History</a></li>#}
+{#                            {% if user|has_permission:'cars.manage_bookings' %}#}
+{#                                <li><a class="dropdown-item" href="{% url 'manage_bookings' %}">Manage Bookings</a></li>#}
+{#                            {% endif %}#}
+{#                            {% if user|has_permission:'cars.add_car' %}#}
+{#                                <li><a class="dropdown-item" href="{% url 'add_car' %}">Add cars</a></li>#}
+{#                            {% endif %}#}
+{#                            {% if user|has_permission:'cars.add_carcategory' %}#}
+{#                                <li><a class="dropdown-item" href="{% url 'add_category' %}">Add Category</a></li>#}
+{#                            {% endif %}#}
+{##}
+{#                        </ul>#}
+{#                    </li>#}
+{#                {% endif %}#}
+{#                {% if user.is_authenticated %}#}
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link" href="{% url 'logout' %}"#}
+{#                           onclick="event.preventDefault(); document.getElementById('logout-form').submit()">Logout</a>#}
+{#                    </li>#}
+{#                {% else %}#}
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link" href="{% url 'login' %}">Login</a>#}
+{#                    </li>#}
+{#                {% endif %}#}
+{#            </ul>#}
+{#        </div>#}
+{#    </div>#}
+{#</nav>#}
+{##}
+{#<form id="logout-form" method="post" action="{% url 'logout' %}" style="display: none;">#}
+{#    {% csrf_token %}#}
+{#</form>#}
+
+
 {% load has_permission %}
-<nav class="navbar navbar-expand-lg navbar-light ">
+<nav class="navbar navbar-expand-lg navbar-light sticky-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'my_posts' %}">My Blog</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -11,11 +81,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'home' %}">Home</a>
                 </li>
-                {% if not user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'about' %}">About</a>
+                </li>
+                {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'create_car_post' %}">Create post</a>
                     </li>
@@ -30,8 +99,6 @@
                            id="bookCarDropdown" role="button" aria-expanded="false">
                             Book a Car
                         </a>
-
-
                         <ul class="dropdown-menu" aria-labelledby="bookCarDropdown">
                             <li><a class="dropdown-item" href="{% url 'book_car' %}">Create a Booking</a></li>
                             <li><a class="dropdown-item" href="{% url 'my_bookings' %}">My Bookings History</a></li>
@@ -41,7 +108,9 @@
                             {% if user|has_permission:'cars.add_car' %}
                                 <li><a class="dropdown-item" href="{% url 'add_car' %}">Add cars</a></li>
                             {% endif %}
-
+                            {% if user|has_permission:'cars.add_carcategory' %}
+                                <li><a class="dropdown-item" href="{% url 'add_category' %}">Add Category</a></li>
+                            {% endif %}
                         </ul>
                     </li>
                 {% endif %}
@@ -63,3 +132,5 @@
 <form id="logout-form" method="post" action="{% url 'logout' %}" style="display: none;">
     {% csrf_token %}
 </form>
+
+<script src="{% static 'js/nav.js' %}"></script>
