--- a/templates/403.html
+++ b/templates/403.html
@@ -18,6 +18,13 @@
 
     <h1>403 Forbidden</h1>
     <p>You do not have permission to perform this action.</p>
+{#    {% if messages %}#}
+{#        <div class="alert alert-danger">#}
+{#            {% for message in messages %}#}
+{#                <p>{{ message }}</p>#}
+{#            {% endfor %}#}
+{#        </div>#}
+{#    {% endif %}#}
 
     <a href="{% url 'home' %}" class="btn">Back to Home</a>
 </div>
