--- a/templates/carposts/edit_post.html
+++ b/templates/carposts/edit_post.html
@@ -12,6 +12,7 @@
         <p></p>
         {{ form.content }}
         <p></p>
+        {{ form.related_cars }}
         <div class="text-center">
             <button type="submit" class="btn btn-primary">Save Changes</button>
             <a href="{% url 'my_posts' %}" class="btn btn-secondary">Cancel</a>
