--- a/templates/carposts/post_detail.html
+++ b/templates/carposts/post_detail.html
@@ -5,7 +5,6 @@
         <h1 class="text-center mb-4">{{ post.title }}</h1>
 
         <div class="row">
-
             <div class="col-lg-8">
                 <div class="card shadow-lg mb-5">
                     <div class="card-body">
@@ -15,6 +14,7 @@
                             <strong>Published:</strong> {{ post.created_at|date:"M d, Y" }}
                         </p>
 
+
                         <div class="d-flex justify-content-between align-items-center">
                             {% if post.is_published %}
                                 <span class="badge bg-success">Published</span>
@@ -22,9 +22,24 @@
                                 <span class="badge bg-warning text-dark">Unpublished</span>
                             {% endif %}
                         </div>
+
+                        <hr class="my-4">
+
+
+                        <h5 class="mb-3">Related Cars</h5>
+                        <div class="d-flex flex-wrap gap-2">
+                            {% for car in post.related_cars.all %}
+                                <a href="{% url 'car_details' car.id %}" class="btn btn-outline-secondary btn-sm">
+                                    {{ car.brand }}
+                                </a>
+                            {% empty %}
+                                <p class="text-muted">No related cars associated with this post.</p>
+                            {% endfor %}
+                        </div>
                     </div>
                 </div>
             </div>
+
 
             <div class="col-lg-4">
                 <div class="card shadow-lg mb-4">
@@ -61,6 +76,7 @@
                         {% include 'common/pagination.html' %}
                     </div>
                 </div>
+
 
                 {% if user.is_authenticated %}
                     <div class="card shadow-lg">
