--- a/templates/cars/my_bookings.html
+++ b/templates/cars/my_bookings.html
@@ -33,6 +33,12 @@
                             {% endif %}
                         </td>
                         <td>{{ booking.created_at|date:"Y-m-d H:i" }}</td>
+                        <td>
+                            {% if booking.status == 'Pending' %}
+                                <a href="{% url 'edit_booking' booking.pk %}" class="btn btn-primary btn-sm">Edit</a>
+                                <a href="#" class="btn btn-danger btn-sm">Cancel</a>
+                            {% endif %}
+                        </td>
                     </tr>
                 {% endfor %}
                 </tbody>
