--- a/templates/common/nav.html
+++ b/templates/common/nav.html
@@ -32,8 +32,10 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="bookCarDropdown">
                             <li><a class="dropdown-item" href="{% url 'cars' %}">Our Cars</a></li>
+                            <li><a class="dropdown-item" href="{% url 'category_list' %}">Our Categories</a></li>
                             <li><a class="dropdown-item" href="{% url 'book_car' %}">Create a Booking</a></li>
                             <li><a class="dropdown-item" href="{% url 'my_bookings' %}">My Bookings History</a></li>
+
                             {% if user|has_permission:'cars.manage_bookings' %}
                                 <li><a class="dropdown-item" href="{% url 'manage_bookings' %}">Manage Bookings</a></li>
                             {% endif %}
