--- a/templates/common/nav.html
+++ b/templates/common/nav.html
@@ -2,7 +2,7 @@
 {% load has_permission %}
 <nav class="navbar navbar-expand-lg navbar-light sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'my_posts' %}">My Blog</a>
+        <a class="navbar-brand" href="{% url 'my_posts' %}"><i class="bi bi-file-text"></i> My Blog</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
